--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -42,7 +42,7 @@
     </div>
     
     <div class="form-actions">
-      <button type="button" class="btn btn-cancel" (click)="closeForm.emit()">Cancel</button>
+      <button type="button" class="btn btn-cancel" (click)="closeForm()">Cancel</button>
       <button type="submit" class="btn btn-submit">{{ isEditing ? 'Update' : 'Save' }} Task</button>
     </div>
   </form>
