working add edit delete undo
all working MINIMUM features

--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -43,7 +43,7 @@
     
     <div class="form-actions">
       <button type="button" class="btn btn-cancel" (click)="closeForm()">Cancel</button>
-      <button type="submit" class="btn btn-submit">{{ isEditing ? 'Update' : 'Save' }} Task</button>
+      <button type="submit" class="btn btn-submit">{{ isEditMode ? 'Update' : 'Save' }} Task</button>
     </div>
   </form>
 </div>
