ALL WORKING AND DESIGNED AMEN
thank you lord no words amen i hate angular bye side add task integrated with cute to to list design

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,7 @@
 <!-- src/app/components/header/header.component.html -->
-<header>
-  <h1>Task Tracker</h1>
-  <button (click)="onToggle()" class="btn">Add Task</button>
+<header class="header">
+    <h1>
+      <span class="emoji">🍓</span>
+      <span class="header-title">My To-Do List</span>
+    </h1>
 </header>
