--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,48 +1,51 @@
 <!-- src/app/components/tasks/tasks.component.html -->
-<div class="container">
-  <app-header (toggleAddTask)="toggleAddTask()"></app-header>
+<div class="container" [class.container-shifted]="showAddTask">
+  <app-header></app-header>
+  <button class="btn btn-add-task" (click)="toggleAddTask()">+ Add Task</button>
   
-  <div *ngIf="showAddTask">
-    <app-add-task
-      [task]="taskToEdit"
-      (onAddTask)="addTask($event)"
-      (onCloseForm)="closeForm()">
-    </app-add-task>
-  </div>
-  
-  <div class="sort-controls">
-    <label>Sort by:</label>
-    <select [(ngModel)]="sortBy" (change)="setSortBy(sortBy)">
-      <option value="dateAdded">Date Added</option>
-      <option value="dueDate">Due Date</option>
-      <option value="priority">Priority</option>
-    </select>
-  </div>
-  
-  <div *ngIf="tasks.length > 0; else noTasks">
-    <div class="task-list">
-      <div *ngFor="let task of tasks">
-        <app-task-item
-          [task]="task"
-          (onDelete)="confirmDelete(task.id!)"
-          (onEdit)="editTask($event)"
-          (onToggleReminder)="toggleReminder($event)"
-          (onToggleComplete)="toggleComplete($event)">
-        </app-task-item>
-        <div *ngIf="confirmDeleteId === task.id" class="confirm-dialog-inline">
-          <p>Are you sure you want to delete this task?</p>
-          <div class="dialog-actions">
-            <button class="btn btn-danger" (click)="deleteTask(task.id!)">Yes, Delete</button>
-            <button class="btn btn-secondary" (click)="cancelDelete()">Cancel</button>
+  <div class="task-list-section">
+    <!-- Side drawer for Add Task -->
+    <div class="add-task-drawer" *ngIf="showAddTask">
+      <app-add-task
+        [task]="taskToEdit"
+        (onAddTask)="addTask($event)"
+        (onCloseForm)="closeForm()">
+      </app-add-task>
+    </div>
+
+    <div class="sort-controls">
+      <label>Sort by:</label>
+      <select [(ngModel)]="sortBy" (change)="setSortBy(sortBy)">
+        <option value="dateAdded">Date Added</option>
+        <option value="dueDate">Due Date</option>
+        <option value="priority">Priority</option>
+      </select>
+    </div>
+
+    <div *ngIf="tasks.length > 0; else noTasks">
+      <div class="task-list">
+        <div *ngFor="let task of tasks">
+          <app-task-item
+            [task]="task"
+            (onDelete)="confirmDelete(task.id!)"
+            (onEdit)="editTask($event)"
+            (onToggleReminder)="toggleReminder($event)"
+            (onToggleComplete)="toggleComplete($event)">
+          </app-task-item>
+          <div *ngIf="confirmDeleteId === task.id" class="confirm-dialog-inline">
+            <p>Are you sure you want to delete this task?</p>
+            <div class="dialog-actions">
+              <button class="btn btn-danger" (click)="deleteTask(task.id!)">Yes, Delete</button>
+              <button class="btn btn-secondary" (click)="cancelDelete()">Cancel</button>
+            </div>
           </div>
         </div>
       </div>
     </div>
+    <ng-template #noTasks>
+      <p class="no-tasks">No tasks yet. Click "Add Task" to get started!</p>
+    </ng-template>
   </div>
-  
-  <ng-template #noTasks>
-    <p>No tasks to show</p>
-  </ng-template>
   
   <div *ngIf="showTaskDeletedToast" class="toast">
     <p>Task deleted</p>
